# laecon

./: .gitignore  CONSTITUTION.md  README.md  _test_imports.py  _test_server_start.py  contract.md  pyproject.toml
guides/: modeling-decision-guide.html
kb/: README.md  review-protocol.md
kb/patterns/: nps-driver-analysis.md
kb/references/: breiman-2001-rf.md  cross-validation.md  friedman-2001-gbm.md  gujarati-porter.md  hosmer-lemeshow.md  long-1997.md  model-selection.md  shap-lime.md
laecon/: __init__.py
laecon/mcp/: __init__.py  server.py
laecon/models/: __init__.py  classifier.py  data_utils.py  diagnostics.py  evaluation.py  interpretation.py  prediction.py  registry.py  regression.py  reporting.py
skills/: README.md
spec/: __check_sizes.py  constitution.md  todo.md
spec/adr/: README.md
spec/opencode-templates/: ADR_TEMPLATE.md  GSD_TEMPLATE.md  HARNESS_TEMPLATE.md  PLAN_TEMPLATE.md  SPEC_TEMPLATE.md  TASKS_TEMPLATE.md
spec/specs/000-bootstrap/: spec.md
src/laecon/mcp/: server.py
tests/: test_mcp_health.py
