[project]
name = "laecon"
version = "0.1.0"
description = "Econometrics + interpretable ML capability for LAOS — regression, GLM, causal inference, timeseries"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "statsmodels>=0.14",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.scripts]
laecon-server = "laecon.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laecon"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
